Optimize web tuner spectrum zoom